--- a/src/main/resources/templates/fragments/alert.html
+++ b/src/main/resources/templates/fragments/alert.html
@@ -1,5 +1,4 @@
-<!-- fragments/alert.html -->
-<div th:if="${error}" class="error-box" id="errorBox" th:text="${error}">Ein Fehler ist aufgetreten</div>
+<div th:if="${error}" class="error-box" id="errorBox" th:text="${error}">An error has occurred</div>
 
 <style>
     .error-box {
