--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,11 +13,11 @@
         <h2>SpringCloud</h2>
         <div class="input-group">
             <input type="text" name="username" required placeholder=" " />
-            <label>Benutzername</label>
+            <label>Username</label>
         </div>
         <div class="input-group">
             <input type="password" name="password" required placeholder=" " />
-            <label>Passwort</label>
+            <label>Password</label>
         </div>
         <div class="checkbox-group">
             <input type="checkbox" id="remember-me" name="remember-me">
