--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -29,23 +29,23 @@
 </div>
 
 <div class="container">
-    <h2>Passwort ändern</h2>
+    <h2>Change Password</h2>
 
     <form th:action="@{/change-password}" method="post">
         <div class="input-group">
             <input type="password" id="currentPassword" name="currentPassword" required placeholder=" ">
-            <label for="currentPassword">Aktuelles Passwort</label>
+            <label for="currentPassword">Current Password</label>
         </div>
         <div class="input-group">
             <input type="password" id="newPassword" name="newPassword" required minlength="8" placeholder=" ">
-            <label for="newPassword">Neues Passwort</label>
+            <label for="newPassword">New Password</label>
         </div>
         <div class="input-group">
             <input type="password" id="confirmPassword" name="confirmPassword" required placeholder=" ">
-            <label for="confirmPassword">Neues Passwort wiederholen</label>
+            <label for="confirmPassword">Repeat new Password</label>
         </div>
 
-        <button type="submit">Passwort ändern</button>
+        <button type="submit">Change</button>
     </form>
 
 
