--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -30,26 +30,24 @@
 
 <div class="container">
     <form class="register-form" th:action="@{/register}" th:object="${user}" method="post">
-        <h2>Registrieren</h2>
+        <h2>Register</h2>
 
         <div class="input-group">
             <input type="text" th:field="*{username}" required placeholder=" " />
-            <label>Benutzername</label>
+            <label>Username</label>
         </div>
 
         <div class="input-group">
             <input type="email" th:field="*{email}" required placeholder=" " />
-            <label>E-Mail</label>
+            <label>Mail</label>
         </div>
 
         <div class="input-group">
             <input type="password" id="password" th:field="*{password}" required placeholder=" " />
-            <label>Passwort</label>
+            <label>Password</label>
         </div>
 
-        <button type="submit">Registrieren</button>
-
-        <p class="register-link">Bereits ein Konto? <a th:href="@{/login}">Login</a></p>
+        <button type="submit">Register</button>
     </form>
 </div>
 
@@ -67,7 +65,7 @@
         const confirmPassword = document.getElementById('confirmPassword').value;
 
         if (password !== confirmPassword) {
-            alert('Passwörter stimmen nicht überein!');
+            alert('Passwords do not match!');
             event.preventDefault();
         }
     });
