changed upload btn

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -48,7 +48,7 @@
     </ul>
 </div>
 
-<button class="upload-btn" onclick="showUploadPopup()">+</button>
+<button class="upload-btn" onclick="showUploadPopup()">Upload file</button>
 
 <div id="confirmSharePopup" class="popup-overlay" style="display: none;">
     <div class="popup-content">
