--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -47,14 +47,15 @@ h1 {
     background-color: var(--btn-color);
     color: white;
     border: none;
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    font-size: 2.5em;
+    width: auto;
+    height: 60px;
+    border-radius: 20px;
+    font-size: 17px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    padding: 0 25px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
     transition: background-color 0.3s ease, transform 0.3s ease;
 }
