Made admin site non selection

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div class="navbar">
+<div class="navbar no-select">
     <div class="brand">SpringCloud</div>
     <div class="username-box" id="usernameBox">
         <svg class="user-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#b259ff" width="24" height="24" aria-hidden="true">
