--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -11,7 +11,7 @@
 <body>
 <div th:replace="~{fragments/alert}"></div>
 
-<div class="navbar">
+<div class="navbar no-select">
     <div class="brand">SpringCloud</div>
     <div class="username-box" id="usernameBox">
         <svg class="user-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#b259ff" width="24" height="24" aria-hidden="true">
