--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -620,3 +620,23 @@ h1 {
     color: #ccc;
 }
 
+.searching {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    justify-content: flex-start;
+}
+
+
+#fileSearch {
+    padding: 12px;
+    font-size: 1rem;
+    border-radius: 8px;
+    border: none;
+    background-color: #2b2b40;
+    color: #ffffff;
+    box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+    width: 100%;
+}
+
+#fileSearch
