fixxed preview Popup

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -153,8 +153,8 @@
     </div>
 </div>
 
-<div id="previewPopup">
-    <div class="popup-content">
+<div id="previewPopup" class="modal">
+    <div class="modal-content popup-content">
         <h2>Preview</h2>
         <div id="previewContainer"></div>
         <button class="close-btn" onclick="closePreviewPopup()">Close</button>
