--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -211,7 +211,7 @@ h1 {
     width: 80%;
     max-width: 1200px;
     height: 80%;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.3);
     justify-content: center;
     align-items: center;
     z-index: 1000;
@@ -227,12 +227,19 @@ h1 {
     text-align: center;
     width: 100%;
     height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     overflow-y: auto;
     transition: all 0.3s ease-in-out;
+}
+
+.popup-content h2 {
+margin-bottom: 10px;
 }
 
 #previewContainer {
@@ -285,6 +292,24 @@ h1 {
 #previewPopup .close-btn:focus {
     outline: none;
 }
+
+#previewPopup button {
+    background-color: #b259ff;
+    color: white;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+#previewPopup button:hover {
+    background-color: #9d4ae2;
+    transform: scale(1.05);
+}
+
+
 
 
 
@@ -394,16 +419,6 @@ h1 {
     align-items: center;
     overflow-y: auto;
     transition: all 0.3s ease-in-out;
-}
-
-#previewContainer {
-    width: 100%;
-    height: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    border-radius: 8px;
 }
 
 #shareModal h3 {
